Terminology improvements by Fabrício Godoy.
2008-07-24  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	* pt_BR.po: Terminology improvements by Fabrício Godoy.

svn path=/trunk/; revision=486

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,5 +1,5 @@
 # gdl: translation to Brazilian Portuguese (pt_BR)
-# Copyright (C) 2003 Free Software Foundation, Inc.
+# Copyright (C) 2003-2008 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gdl package.
 # Alexandre Folle de Menezes <afmenez@terra.com.br>, 2003.
 # based on the GNOME 2.2 translation to Portuguese (pt) by
@@ -7,17 +7,20 @@
 # Duarte Loreto <happyguy_pt@hotmail.com>, 2003
 # Alexandre Folle de Menezes <afmenez@terra.com.br>, 2004.
 # Og Maciel <ogmaciel@gnome.org>, 2008.
+# Fabrício Godoy <skarllot@gmail.com>, 2008.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.2\n"
+"Project-Id-Version: gdl 2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-27 08:47-0300\n"
-"PO-Revision-Date: 2008-02-26 22:09-0500\n"
-"Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
+"PO-Revision-Date: 2008-07-23 00:17-0300\n"
+"Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../gdl/gdl-data-view.c:418
 msgid "Expander Size"
@@ -33,7 +36,7 @@ msgstr "Minimizar"
 
 #: ../gdl/gdl-dock-item-grip.c:375
 msgid "Iconify this dock"
-msgstr "Minimizar esta doca"
+msgstr "Minimizar este encaixe"
 
 #: ../gdl/gdl-dock-item-grip.c:377
 msgid "Close"
@@ -41,11 +44,11 @@ msgstr "Fechar"
 
 #: ../gdl/gdl-dock-item-grip.c:377
 msgid "Close this dock"
-msgstr "Fechar esta doca"
+msgstr "Fechar este encaixe"
 
 #: ../gdl/gdl-dock-item-grip.c:686 ../gdl/gdl-dock-tablabel.c:128
 msgid "Controlling dock item"
-msgstr "Item controlador de doca"
+msgstr "Item controlador de encaixes"
 
 #: ../gdl/gdl-dock-item-grip.c:687
 msgid "Dockitem which 'owns' this grip"
@@ -57,7 +60,7 @@ msgstr "Orientação"
 
 #: ../gdl/gdl-dock-item.c:244
 msgid "Orientation of the docking item"
-msgstr "Orientação do item da doca"
+msgstr "Orientação do item de encaixe"
 
 #: ../gdl/gdl-dock-item.c:259
 msgid "Resizable"
@@ -66,7 +69,7 @@ msgstr "Redimensionável"
 #: ../gdl/gdl-dock-item.c:260
 msgid "If set, the dock item can be resized when docked in a GtkPanel widget"
 msgstr ""
-"Se definido, o item da doca pode ser redimensionado quando encaixado a um "
+"Se definido, o item de encaixe pode ser redimensionado quando encaixado a um "
 "componente GtkPanel"
 
 #: ../gdl/gdl-dock-item.c:267
@@ -78,8 +81,8 @@ msgid ""
 "General behavior for the dock item (i.e. whether it can float, if it's "
 "locked, etc.)"
 msgstr ""
-"Comportamento geral do item da doca (ex: se pode flutuar, se está bloqueado, "
-"etc.)"
+"Comportamento geral do item de encaixe (ex: se pode flutuar, se está "
+"bloqueado e etc.)"
 
 #: ../gdl/gdl-dock-item.c:276 ../gdl/gdl-dock-master.c:145
 msgid "Locked"
@@ -89,7 +92,7 @@ msgstr "Bloqueado"
 msgid ""
 "If set, the dock item cannot be dragged around and it doesn't show a grip"
 msgstr ""
-"Se definido, o item da doca não pode ser arrastado e não mostra um "
+"Se definido, o item de encaixe não pode ser arrastado e não mostra um "
 "manipulador"
 
 #: ../gdl/gdl-dock-item.c:285
@@ -98,7 +101,7 @@ msgstr "Largura preferencial"
 
 #: ../gdl/gdl-dock-item.c:286
 msgid "Preferred width for the dock item"
-msgstr "Largura preferencial para o item da doca"
+msgstr "Largura preferencial para o item de encaixe"
 
 #: ../gdl/gdl-dock-item.c:292
 msgid "Preferred height"
@@ -106,7 +109,7 @@ msgstr "Altura preferencial"
 
 #: ../gdl/gdl-dock-item.c:293
 msgid "Preferred height for the dock item"
-msgstr "Altura preferencial para o item da doca"
+msgstr "Altura preferencial para o item de encaixe"
 
 #: ../gdl/gdl-dock-item.c:543
 #, c-format
@@ -114,8 +117,8 @@ msgid ""
 "You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or "
 "some other compound dock object."
 msgstr ""
-"Não é possível adicionar um objeto doca (%p do tipo %s) dentro de um %s. Use "
-"um GdlDock ou algum outro objeto doca composto."
+"Não é possível adicionar um objeto de encaixe (%p do tipo %s) dentro de um %"
+"s. Use um GdlDock ou algum outro objeto de encaixe composto."
 
 #: ../gdl/gdl-dock-item.c:550
 #, c-format
@@ -129,7 +132,7 @@ msgstr ""
 #: ../gdl/gdl-dock-item.c:1236 ../gdl/gdl-dock-item.c:1286
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
-msgstr "Estratégia de encaixe %s sem suporte no objeto doca do tipo %s"
+msgstr "Habilidade de encaixe %s sem suporte no objeto de encaixe do tipo %s"
 
 #. UnLock menuitem
 #: ../gdl/gdl-dock-item.c:1390
@@ -191,7 +194,7 @@ msgstr "Nome"
 
 #: ../gdl/gdl-dock-layout.c:741 ../gdl/layout.glade.h:1
 msgid "Dock items"
-msgstr "Itens da doca"
+msgstr "Itens de encaixe"
 
 #: ../gdl/gdl-dock-layout.c:747 ../gdl/layout.glade.h:3
 msgid "Saved layouts"
@@ -203,8 +206,8 @@ msgid ""
 "While loading layout: don't know how to create a dock object whose nick is '%"
 "s'"
 msgstr ""
-"Carregando disposição: desconhece-se como criar um objeto doca cujo apelido "
-"é \"%s\""
+"Ao carregar disposição: desconhece-se como criar um objeto de encaixe cujo "
+"apelido é \"%s\""
 
 #: ../gdl/gdl-dock-layout.c:1268
 msgid "Layout managment"
@@ -216,16 +219,16 @@ msgstr "Título padrão"
 
 #: ../gdl/gdl-dock-master.c:139
 msgid "Default title for newly created floating docks"
-msgstr "Título padrão para novas docas flutuantes criadas"
+msgstr "Título padrão para novos encaixes flutuantes criados"
 
 #: ../gdl/gdl-dock-master.c:146
 msgid ""
 "If is set to 1, all the dock items bound to the master are locked; if it's "
 "0, all are unlocked; -1 indicates inconsistency among the items"
 msgstr ""
-"Se é definido como 1, todos os itens da doca vinculados ao mestre estão "
-"travados; se for 0, estão todos destravados; -1 indica inconsistência entre "
-"os itens"
+"Se está definido como 1, todos os itens de encaixe vinculados ao mestre "
+"estão bloqueados; se for 0, estão todos desbloqueados; -1 indica "
+"inconsistência entre os itens"
 
 #: ../gdl/gdl-dock-master.c:154 ../gdl/gdl-switcher.c:704
 msgid "Switcher Style"
@@ -250,8 +253,8 @@ msgid ""
 "The new dock controller %p is automatic.  Only manual dock objects should be "
 "named controller."
 msgstr ""
-"O novo controlador de doca %p é automático. Somente objetos doca manuais "
-"deveriam ser denominados controladores."
+"O novo controlador de encaixes %p é automático. Somente objetos de encaixe "
+"manuais deveriam ser denominados como controladores."
 
 #: ../gdl/gdl-dock-notebook.c:134
 msgid "Page"
@@ -263,7 +266,7 @@ msgstr "O índice da página atual"
 
 #: ../gdl/gdl-dock-object.c:120
 msgid "Unique name for identifying the dock object"
-msgstr "Nome único para identificar o objeto doca"
+msgstr "Nome único para identificar o objeto de encaixe"
 
 #: ../gdl/gdl-dock-object.c:127
 msgid "Long name"
@@ -271,7 +274,7 @@ msgstr "Nome longo"
 
 #: ../gdl/gdl-dock-object.c:128
 msgid "Human readable name for the dock object"
-msgstr "Nome humanamente legível para o objeto encaixável"
+msgstr "Nome humanamente legível para o objeto de encaixe"
 
 #: ../gdl/gdl-dock-object.c:134
 msgid "Stock Icon"
@@ -279,15 +282,15 @@ msgstr "Ícone predefinido"
 
 #: ../gdl/gdl-dock-object.c:135
 msgid "Stock icon for the dock object"
-msgstr "Ícone predefinido para o objeto doca"
+msgstr "Ícone predefinido para o objeto de encaixe"
 
 #: ../gdl/gdl-dock-object.c:141
 msgid "Dock master"
-msgstr "Doca mestre"
+msgstr "Encaixe mestre"
 
 #: ../gdl/gdl-dock-object.c:142
 msgid "Dock master this dock object is bound to"
-msgstr "Doca mestre a que este objeto está vinculado"
+msgstr "Encaixe mestre ao qual este objeto de encaixe está vinculado"
 
 #: ../gdl/gdl-dock-object.c:444
 #, c-format
@@ -295,8 +298,8 @@ msgid ""
 "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
 "hasn't implemented this method"
 msgstr ""
-"Chamada a gdl_dock_object_dock em um objeto doca %p (tipo do objeto é %s) "
-"que não tem este método implementado"
+"Chamada a gdl_dock_object_dock em um objeto de encaixe %p (o tipo do objeto "
+"é %s) que não tem este método implementado"
 
 #: ../gdl/gdl-dock-object.c:576
 #, c-format
@@ -304,8 +307,8 @@ msgid ""
 "Dock operation requested in a non-bound object %p. The application might "
 "crash"
 msgstr ""
-"Operação de doca solicitada a um objeto %p desvinculado. A aplicação pode "
-"travar"
+"Operação de encaixe solicitada a um objeto %p desvinculado. O aplicativo "
+"pode travar"
 
 #: ../gdl/gdl-dock-object.c:583
 #, c-format
@@ -317,7 +320,8 @@ msgstr "Não é possível encaixar %p a %p pois pertencem a mestres diferentes"
 msgid ""
 "Attempt to bind to %p an already bound dock object %p (current master: %p)"
 msgstr ""
-"Tentativa de vincular a %p um objeto doca %p já vinculado (mestre atual: %p)"
+"Tentativa de vincular a %p um objeto de encaixe %p já vinculado (mestre "
+"atual: %p)"
 
 #: ../gdl/gdl-dock-paned.c:132
 msgid "Position"
@@ -345,7 +349,7 @@ msgstr "Hóspede"
 
 #: ../gdl/gdl-dock-placeholder.c:152
 msgid "The dock object this placeholder is attached to"
-msgstr "O objeto doca ao qual este espaço reservado está anexado"
+msgstr "O objeto de encaixe ao qual este espaço reservado está anexado"
 
 #: ../gdl/gdl-dock-placeholder.c:159
 msgid "Next placement"
@@ -382,8 +386,8 @@ msgstr "Nível superior flutuante"
 #: ../gdl/gdl-dock-placeholder.c:185
 msgid "Whether the placeholder is standing in for a floating toplevel dock"
 msgstr ""
-"Se o espaço reservado está no lugar de uma doca de nível superior flutuante "
-"ou não"
+"Se o espaço reservado está ou não no lugar de um encaixe de nível superior "
+"flutuante"
 
 #: ../gdl/gdl-dock-placeholder.c:191
 msgid "X-Coordinate"
@@ -391,7 +395,7 @@ msgstr "Coordenada X"
 
 #: ../gdl/gdl-dock-placeholder.c:192
 msgid "X-Coordinate for dock when floating"
-msgstr "Coordenada X para a doca quando flutuante"
+msgstr "Coordenada X para o encaixe quando flutuante"
 
 #: ../gdl/gdl-dock-placeholder.c:198
 msgid "Y-Coordinate"
@@ -399,12 +403,12 @@ msgstr "Coordenada Y"
 
 #: ../gdl/gdl-dock-placeholder.c:199
 msgid "Y-Coordinate for dock when floating"
-msgstr "Coordenada Y para a doca quando flutuante"
+msgstr "Coordenada Y para o encaixe quando flutuante"
 
 #: ../gdl/gdl-dock-placeholder.c:494
 msgid "Attempt to dock a dock object to an unbound placeholder"
 msgstr ""
-"Tentativa de encaixar um objeto doca a um espaço reservado desvinculado"
+"Tentativa de encaixar um objeto de encaixe a um espaço reservado sem vínculo"
 
 #: ../gdl/gdl-dock-placeholder.c:618
 #, c-format
@@ -442,19 +446,19 @@ msgstr "Flutuante"
 
 #: ../gdl/gdl-dock.c:179
 msgid "Whether the dock is floating in its own window"
-msgstr "Se a doca está flutuando na sua própria janela"
+msgstr "Se o encaixe está flutuando na sua própria janela"
 
 #: ../gdl/gdl-dock.c:187
 msgid "Default title for the newly created floating docks"
-msgstr "Título padrão para as novas docas flutuantes"
+msgstr "Título padrão aos novos encaixes flutuantes"
 
 #: ../gdl/gdl-dock.c:194
 msgid "Width for the dock when it's of floating type"
-msgstr "Largura da doca quando é do tipo flutuante"
+msgstr "Largura do encaixe quando é do tipo flutuante"
 
 #: ../gdl/gdl-dock.c:202
 msgid "Height for the dock when it's of floating type"
-msgstr "Altura da doca quando é do tipo flutuante"
+msgstr "Altura do encaixe quando é do tipo flutuante"
 
 #: ../gdl/gdl-dock.c:209
 msgid "Float X"
@@ -462,7 +466,7 @@ msgstr "Flutuante X"
 
 #: ../gdl/gdl-dock.c:210
 msgid "X coordinate for a floating dock"
-msgstr "Coordenada X para uma doca flutuante"
+msgstr "Coordenada X para um encaixe flutuante"
 
 #: ../gdl/gdl-dock.c:217
 msgid "Float Y"
@@ -470,12 +474,12 @@ msgstr "Flutuante Y"
 
 #: ../gdl/gdl-dock.c:218
 msgid "Y coordinate for a floating dock"
-msgstr "Coordenada Y para uma doca flutuante"
+msgstr "Coordenada Y para um encaixe flutuante"
 
 #: ../gdl/gdl-dock.c:499
 #, c-format
 msgid "Dock #%d"
-msgstr "Doca Nº%d"
+msgstr "Encaixe nº%d"
 
 #: ../gdl/gdl-icons.c:134 ../gdl/gdl-icons.c:135
 msgid "Icon size"
@@ -491,4 +495,4 @@ msgstr "_Carregar"
 
 #: ../gdl/layout.glade.h:5
 msgid "_Lock dock items"
-msgstr "B_loquear itens da doca"
+msgstr "B_loquear itens de encaixe"
