--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-18  Sandeep Shedmake  <sshedmak@redhat.com> 
+
+	* mr.po: Updated Marathi Translations.
+
 2008-08-6  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
