--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== gdl 2.23.0 ===
+
+2008-08-18  Naba Kumar  <naba@gnome.org>
+
+	* configure.in: Bumpped version to 2.23.90
+	* NEWS: Updated for a release.
+	
 2008-06-20  Christian Persch  <chpe@gnome.org>
 
 	* gdl/gdl-dock-layout.c: (gdl_dock_layout_construct_layouts_ui): Also
