--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+
+2008-08-25  Goran Rakic  <grakic@devbase.net>
+
+        * LINGUAS, sr@latin.po, sr@Latn.po: Conversion from sr@Latn to sr@latin.
+
 2008-08-18  Sandeep Shedmake  <sshedmak@redhat.com> 
 
 	* mr.po: Updated Marathi Translations.
