--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-02  Johannes Schmid  <jhs@gnome.org>
+
+	* POTFILES.in:
+	Removed files
+
 2008-08-28  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
