configure.in Bumped version updated
2008-09-22  Johannes Schmid  <jhs@gnome.org>

        * configure.in Bumped version
        * NEWS: updated


svn path=/trunk/; revision=508

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 2.24.0
+
+* Fixed dataroot problem
+* Removed old code (and as such gnome-vfs dependency)
+* Translation updates: he, sr, ar, et, hr, mr
+
 Changes in 2.23.90
 
 * Version increased to match gnome releases.
