--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== gdl 2.24.0 ===
+
+2008-09-22  Johannes Schmid  <jhs@gnome.org>
+
+	* configure.in Bumped version
+	* NEWS: updated
+
 2008-09-02  Christian Persch <chpe@gnome.org>
 
 	* gdl-1.0.pc.in:
