--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-19  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Djihed Afifi.
+
 2008-09-22  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po, LINGUAS: Added Hebrew translation.
