--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-04  Raivis Dejus  <orvils@gmail.com>
+
+	* lv.po: Updated latvian translation
+
 2008-09-22  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po, LINGUAS: Added Hebrew translation.
