--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-10  Gil Forcada  <gforcada@gnome.org>
+
+	* ast.po: Added Asturian translation on behalf of Mikel González.
+	* LINGUAS: Added ast.
+
 2009-01-04  Raivis Dejus  <orvils@gmail.com>
 
 	* lv.po: Updated latvian translation
