--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-12  Jani Monoses  <jani@ubuntu.com>
+
+	* LINGUAS:
+	* ro.po: Updated Romanian translation
+	by Adi Roiban <adi@roiban.ro>
+
 2009-02-10  Gil Forcada  <gforcada@gnome.org>
 
 	* ast.po: Added Asturian translation on behalf of Mikel González.
