Added myself Update for release Bumped version
2009-03-02  Johannes Schmid  <jhs@gnome.org>

	* MAINTAINERS: Added myself
	* NEWS: Update for release
	* configure.in: Bumped version

svn path=/trunk/; revision=522

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
-Changes in 2.25.90:
+Changes in 2.25.92:
+
+* #566801 – Docking+undocking all makes the buttons disappear and
+	crashes if you use "Reset dock layout" (Sébastien Granjoux)
+* #573522 – More patches for GDL (Joel Holdsworth)
+* Small documentation update
+
+Changes in 2.25.91:
 
 * Added some gtk-doc documentation (Joel Holdsworth)
 * Cleaned-up gtk+ includes (Pedro Fragoso)
