--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-03-02  Johannes Schmid  <jhs@gnome.org>
+
+	* MAINTAINERS: Added myself
+	* NEWS: Update for release
+	* configure.in: Bumped version
+
+=== gdl 2.25.92 ===
+
 2009-03-01  Johannes Schmid  <jhs@gnome.org>
 
 	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_realize),
