--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-04  Manoj Kumar Giri  <mgiri@redhat.com>
+
+	* or.po: Updated Oriya Translation.
+	* LINGUAS: Added Oriya(or) into the List.
+
 2009-02-18  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
