--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-04  Carl-Anton Ingmarsson <ca.ingmarsson@gmail.com>
+
+	* gdl/gdl-switcher.c (layout_buttons):
+	#574172 – shutup valgrind
+
 2009-03-04  Johannes Schmid  <jhs@gnome.org>
 
 	* Makefile.am: Fix distcheck
