--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-13  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	 * gl.po: Updated Galician translation
+
 2009-03-13  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po: Updated Hebrew translation by Yaron Sharabani.
