--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-13  Wadim Dziedzic  <wdziedzic@aviary.pl>
+
+	* pl.po: Updated Polish translation
+
 2009-03-13  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	 * gl.po: Updated Galician translation
